# TRAILBot

./: .gitignore  README.md  build.sh
Arduino/: MicroRos_ArduinoDue_Setup_Guide.md  README.md  run_microros_agent.sh  setup_microros_agent.sh  setup_microros_arduinodue.sh
Arduino/micro-ros_runservo_service/: micro-ros_runservo_service.ino
SLAM/: package.xml  setup.cfg  setup.py
alias/: README.md
bagging_files/: package.xml  setup.cfg  setup.py
bagging_files/launch/: bag_play_bare.launch.py  bag_play_wnav.launch.py  bag_record_ALL.launch.py  bag_record_nav.launch.py  bag_record_sensors.launch.py  bag_record_sensors.py
base/launch/: base.launch.py
behaviour/: fsm_1.py
calibration/: README.md  calibrationChecker.mlx  filter.py  scatterPlot.mlx  timestampMatcher.py
control/: CMakeLists.txt  package.xml
fsm/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
fsm/fsm/: basic_navigator.py  nav_fsm_node.py  nav_fsm_test_file.py  navigator.py  navigator_node.py  test_cmd_vel_node.py  test_snack_node.py  test_temp.py  tf2_listener.py  trailbot_action.py  trailbot_fsm.launch.py  trailbot_fsm.py  trailnav_cmd.py  trailnav_fsm.py
fsm/launch/: nav_fsm.launch.py
fsm/scripts/: robot_navigator.py  trailbot_fsm.py  trailbot_states.py
gazebo/: CMakeLists.txt  README.md  package.xml
gazebo/config/: control.yaml  ekf.yaml  nav2_params.yaml  navigate_to_pose_truncated_update.xml  rviz_config.rviz  trailbot_lds_2d.lua  trailbot_lds_3d.lua
gazebo/launch/: basic_navigator.py  basic_navigator_launch.py  bringup_cartographer_launch.py  bringup_launch.py  fsm.py  gazebo_sim.launch.py  joystick.launch.py  nav_sim.launch.py  navigation_launch.py  node1.py  rsp.launch.py  trailbot_cartographer.launch.py
gazebo/urdf/: decorations.urdf.xacro  husky.urdf.xacro  husky_macro.urdf.xacro  inertial_macros.xacro  wheel.urdf.xacro
gazebo/worlds/: clearpath_playpen.world
human-tracking-and-pose-detection/: .gitignore  helper_for_visualization.py  main.py  my_helpers.py  readme.md
human_detection/: configs.yaml  readme.md  setup.cfg  setup.py
human_detection/human_detection/: README.md  example_usage.py  human_detection_marker_node.py  human_detection_node.py  sort.py  yolov7.py
human_detection/human_detection/.old_movenet/: human_detection_node.py
human_detection/human_detection/models/: common.py
human_detection/human_detection/utils/: general.py  google_utils.py
human_detection/yolov7 skeleton/: commands.txt  example_usage.py  human_detection_node.py  main.py  readme.md  yolov7.py
human_detection/yolov7_skeleton/: .gitignore  ascii_numbers.py  human_detection_node.py  readme.md  yolov7.py
human_detection/yolov7_skeleton/utils/: datasets.py
husky/: README.md
husky/husky_base/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.sh
nav/: package.xml  setup.cfg  setup.py
nav/config/: nav2_params_points.yaml  navigate_to_pose_truncated.xml  navigate_to_pose_truncated_update.xml
nav/launch/: navigation_launch.py
navigator/: README.md  package.xml  setup.py
perception/: CMakeLists.txt  package.xml
perception/tracking2d/: helper_for_visualization.py  main.py  readme.md
perception/tracking3d/: LidarCameraSubscriber.py  readme.md  setup.cfg  setup.py
planning/: CMakeLists.txt  package.xml
pointcloud_filter/: CMakeLists.txt  package.xml
pointcloud_filter/include/pointcloud_filter/: pointcloud_filter_node.hpp
pointcloud_filter/launch/: launch.py
pointcloud_filter/src/: pointcloud_filter.cpp  pointcloud_filter_node.cpp
pointcloud_to_laserscan_converter/: CMakeLists.txt  package.xml
pointcloud_to_laserscan_converter/include/: pointcloud_to_laserscan_node.hpp
pointcloud_to_laserscan_converter/launch/: sample_pointcloud_to_laserscan_launch.py
pointcloud_to_laserscan_converter/src/: pointcloud_to_laserscan_node.cpp
run_servo_client/: README.md  package.xml  setup.cfg  setup.py
run_servo_client/run_servo_client/: run_servo_client.py
servo_interfaces/: CMakeLists.txt  package.xml
slam/: package.xml  setup.py
slam/config/: rviz_config.rviz  trailbot_lds_2d.lua  trailbot_lds_3d.lua
slam/launch/: occupancy_grid.launch.py
snack_wanted_srv_pkg/: package.xml  setup.cfg  setup.py
snack_wanted_srv_pkg/snack_wanted_srv_pkg/: snack_wanted_srv.py
src/cam_publisher/: package.xml  setup.py
src/cam_subscriber/: package.xml  setup.cfg  setup.py
tf_transform/: package.xml  setup.cfg  setup.py
tf_transform/launch/: tf_transform.launch.py
tf_transform/tf_transform/: tf_transform_node.py
tracking3d/: package.xml  readme.md  setup.py
tracking3d/human_detection/: LidarCameraSubscriber.py
trail_detection_node/: README.md  package.xml  setup.cfg  setup.py  test.py  test.txt
trail_detection_node/trail_detection_node/: GANav_visualizer.py  model_loader.py  model_store.py  resnetv1b.py  segbase.py  setup.py  trailDetectionNode.py  trails_trained_model_DL.py  v1_trailDetectionNode.py  v2_trailDetectionNode.py  visualizer_v1_trailDetectionNode.py  visualizer_v2_trailDetectionNode.py
trailbot_bringup/: package.xml  setup.cfg  setup.py
trailbot_bringup/config/: rviz_husky_config.rviz
trailbot_bringup/launch/: bag_play.launch.py  bag_play_wnav.launch.py  bagging.launch.py  demo1.launch.py  demo2.launch.py  demo_autoronto.launch.py  driving.launch.py  logitech_camera.launch.py  nav.launch.py  nav_2D.launch.py  nav_3D.launch.py  nav_camera.launch.py  ouster.launch.py  remote_control.launch.py  slam.launch.py  slam_2D.launch.py  slam_3D.launch.py
trailbot_interfaces/: CMakeLists.txt  README.md  package.xml
trailbot_interfaces/msg/: SnacksInventory.msg
trailbot_interfaces/srv/: RunServo.srv  SnackWanted.srv
trailbot_main/: package.xml  setup.cfg  setup.py
voice_assistant/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
voice_assistant_pkg/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
voice_assistant_pkg/config/: params.yaml
voice_assistant_pkg/voice_assistant_pkg/: conversation_handler.py  snack_wanted_service.py  speech_recognizer.py  text_to_speech_engine.py  voice_assistant.py
(+68 files in other folders)
