[develop]
script_dir=$base/lib/human_detection
[install]
install_scripts=$base/lib/human_detection

[metadata]
name = human_detection
version = 0.0.0
description = TODO: Package description
author = zhaodong
author_email = zhaodong@todo.todo
license = TODO: License declaration

[options]
packages = human_detection
install_requires = setuptools

[options.entry_points]
console_scripts =
    human_detection = human_detection.LidarCameraSubscriber:main
   
