<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_assistant_pkg</name>
  <version>0.0.0</version>
  <description>Initiates voice assistant/ChatGPT and upon user voice commands calls runservo service  to operate servos</description>
  <maintainer email="barzanisar93@gmail.com">Barza Nisar</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>servo_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
